fix issue and build docker complete

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ DB_PORT=3306
 DB_DATABASE=dev_test
 DB_USERNAME=root
 DB_PASSWORD=
+MARIADB_ROOT_PASSWORD=
+MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
