--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,12 @@ services:
     volumes:
       - "./nginx-certs:/etc/nginx/certs"
       - "./nginx/templates:/etc/nginx/templates"
+      - "./nginx/keys:/etc/keys"
       - "./vendor/ryoluo/sail-ssl/nginx/generate-ssl-cert.sh:/docker-entrypoint.d/99-generate-ssl-cert.sh"
     restart: always
     networks:
       - sail
- 
+
   mariadb:
     image: mariadb:10.6.18
     ports:
@@ -27,7 +28,7 @@ services:
       MARIADB_ROOT_USER: "${DB_USERNAME}"
       MARIADB_USER: "${DB_USERNAME}"
       MARIADB_PASSWORD: "${DB_PASSWORD}"
-      ALLOW_EMPTY_PASSWORD: 1
+      MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: 1
     volumes:
       - "./mariadb:/var/lib/mysql"
     networks:
