--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,5 @@
         "ssl",
         "docker"
     ],
-    "license": "MIT",
-    "require": {
-        "ryoluo/sail-ssl": "^1.3"
-    }
+    "license": "MIT"
 }
